--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <meta charset="UTF-8">
+    <title>CUSTRESMICH</title> 
+  
   <style>
     /* Estilos CSS para la galería */
     .galeria {
