--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <title>CUSTRESMICH</title> 
   
   <style>
+ body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #f9f9f9;
+            padding: 20px;
+            text-align: center;
+        }
     /* Estilos CSS para la galería */
     .galeria {
       display: flex;
@@ -37,7 +65,17 @@
   </style>
 </head>
 <body>
-  <div class="galeria">
+
+ <header>
+        <h1>Mi página web</h1>
+    </header>
+
+    <main>
+        <h2>Bienvenido a mi página web</h2>
+        <p>Este es un ejemplo de una página web simple.</p>
+        <p>Puedes añadir tu contenido aquí.</p>
+
+       <div class="galeria">
     <!-- Ejemplo de producto -->
     <div class="producto">
       <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
@@ -45,62 +83,36 @@
       <p class="precio-producto">$10.00</p>
     </div>
 
+          <div class="galeria">
     <!-- Ejemplo de producto -->
     <div class="producto">
-      <img src="imagen2.jpg" alt="Producto 2" class="imagen-producto">
-      <p class="nombre-producto">Producto 2</p>
-      <p class="precio-producto">$15.00</p>
+      <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
+      <p class="nombre-producto">Producto 1</p>
+      <p class="precio-producto">$10.00</p>
+    </div>
+            
+ <div class="galeria">
+    <!-- Ejemplo de producto -->
+    <div class="producto">
+      <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
+      <p class="nombre-producto">Producto 1</p>
+      <p class="precio-producto">$10.00</p>
+    </div>
+   
+    <div class="galeria">
+    <!-- Ejemplo de producto -->
+    <div class="producto">
+      <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
+      <p class="nombre-producto">Producto 1</p>
+      <p class="precio-producto">$10.00</p>
     </div>
 
-    <div class="galeria">
-      <!-- Ejemplo de producto -->
-      <div class="producto">
-        <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
-        <p class="nombre-producto">Producto 1</p>
-        <p class="precio-producto">$10.00</p>
-      </div>
 
-      <div class="galeria">
-         <!-- Ejemplo de producto -->
-         <div class="producto">
-           <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
-           <p class="nombre-producto">Producto 1</p>
-           <p class="precio-producto">$10.00</p>
-         </div>
-
-         <div class="galeria">
-            <!-- Ejemplo de producto -->
-            <div class="producto">
-              <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
-              <p class="nombre-producto">Producto 1</p>
-              <p class="precio-producto">$10.00</p>
-            </div>
-
-            <div class="galeria">
-               <!-- Ejemplo de producto -->
-               <div class="producto">
-                 <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
-                 <p class="nombre-producto">Producto 1</p>
-                 <p class="precio-producto">$10.00</p>
-               </div>
-
-               <div class="galeria">
-                  <!-- Ejemplo de producto -->
-                  <div class="producto">
-                    <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
-                    <p class="nombre-producto">Producto 1</p>
-                    <p class="precio-producto">$10.00</p>
-                  </div>
-
-                  <div class="galeria">
-                     <!-- Ejemplo de producto -->
-                     <div class="producto">
-                       <img src="imagen1.jpg" alt="Producto 1" class="imagen-producto">
-                       <p class="nombre-producto">Producto 1</p>
-                       <p class="precio-producto">$10.00</p>
-                     </div>
-
-    <!-- Añade más productos aquí -->
-  </div>
+    </main>
+ 
+ <footer>
+        &copy; 2022 Mi página web. Todos los derechos reservados.
+    </footer>
+  
 </body>
 </html>
